@@ -1,5 +1,9 @@
 2018-12-18  Jonathan Wakely  <jwakely@redhat.com>
 
+	* include/bits/fs_dir.h (operator<<): Overload for directory_entry,
+	as per LWG 3171.
+	* testsuite/27_io/filesystem/directory_entry/lwg3171.cc: New test.
+
 	* src/filesystem/std-dir.cc (filesystem::_Dir::advance): Move new
 	path instead of copying.
 
